Fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ body{
 .story-btn {
 	position: absolute;
 	display: block;
-	left: 43%;
+	left: 33%;
 	color: #fff;
 }
 
@@ -326,7 +326,7 @@ a {
 
 .description {
 	display:block;
-	text-align: center;
+	
 }
 
 .contact {
@@ -374,19 +374,23 @@ a {
 
 
 @media only screen and (min-width: 25em){
-	.product{
-		padding-bottom:110%;
+	.product {
+		padding-bottom:115%;
 	}
 
-	.profile{
+	.profile {
 		width:60%;
 		height:60%;
+	}
+
+	.story-btn {
+		left:40%;
 	}
 }
 
 @media only screen and (min-width: 38em){
 	.product{
-		padding-bottom:90%;
+		padding-bottom:100%;
 	}
 
 	.profile{
@@ -394,12 +398,16 @@ a {
 		height: 50;
 	}
 
+	.story-btn {
+		left:43%;
+	}
+
 }
 
 @media only screen and (min-width: 60em){
 
 .product {
-		padding-bottom:45%;
+		padding-bottom:60%;
 	}	
 
 .banana-four {
